sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:20: error: '(' expected but identifier found.
      if A == "WHITE"
         ^