sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  for (i <- 0 to getSize()-2 ) {
    if (!ordre(i,i+1))
    	swap(i, i+1)
  }
}


def ordre(x:Int, y:Int) = {
  A = getColor(x);
  B = getColor(y);
  
  if (A == B )
   	return true;
  else{
  	if( A == "BLUE" || B == "RED" )
    	return true;
  	else{
      if A == "WHITE"
      	return true
      else
      	return false
    }
  }
}